# the-hooker

./: CMakeLists.txt  CONTRIBUTING.md  README.md
src/: Commands.cpp  Commands.hpp  main.cpp  messages.hpp  values.hpp
src/data/: values.hpp
src/general-purpose/: logger.cpp  logger.hpp
src/include/: logger.cpp  logger.hpp
src/utils/: check_for_channel.hpp  enums.hpp  options_macros.hpp  requests_macros.hpp
